# Gravitysim-ish

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  gravitysim.cpp
include/gravitysim/: gravitysim.hpp  kernel.hpp
src/: CMakeLists.txt  kernel.cu
